--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>My GitHub Page</title>
+  </head>
+  <body>
+    <script src="index.js"></script>
+  </body>
+</html>
