--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My GitHub Page</title>
+    <title>crispy-telegram (Noctura)</title>
   </head>
   <body>
     <script src="index.js"></script>
